5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1602_2895.log
== TEST (2019-03-20 19:10:21) 
-- CODE:
var = float(input"Qual o valor unitario do jogo?")
total = 5*var + 40
print = (total)
-- ERROR:
File "XXXX", line 1
    var = float(input"Qual o valor unitario do jogo?")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:42) 
-- CODE:
var = float(input"jogos")
total = 5*var + 40
print = (total)
-- ERROR:
File "XXXX", line 1
    var = float(input"jogos")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:08) 
-- CODE:
var = float(input"jogos")
total = 5*100 + 40
print = (total)
-- ERROR:
File "XXXX", line 1
    var = float(input"jogos")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:39) 
-- CODE:
var = float(input"5")
total = 5*100 + 40
print = (total)
-- ERROR:
File "XXXX", line 1
    var = float(input"5")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:14:50) 
-- CODE:
var = int input("quantidade de jogos")
var1 = int input("valor dos jogos")
var2 = int input("valor do frete")
total= var*var1 + var2
print(total)
-- ERROR:
File "XXXX", line 1
    var = int input()
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:15:33) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total= var*var1 + var2
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:15:34) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total= var*var1 + var2
print(total)
-- EXECUTION TIME:
0.156501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:15:45) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total= var*var1 + var2
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:15:46) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total= var*var1 + var2
print (total)
-- EXECUTION TIME:
0.204069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:15:51) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total= var*var1 + var2
print = (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:15:52) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total= var*var1 + var2
print = (total)
-- EXECUTION TIME:
0.121383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:10) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total = var*var1 + var2
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:19:12) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total = var*var1 + var2
print (total)
-- EXECUTION TIME:
0.154419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:22) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total = var*var1 + var2
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:19:27) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total = var*var1 + var2
print(total)
-- EXECUTION TIME:
0.222379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:28) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total = var*var1 + var2
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:19:31) 
-- CODE:
var = int(input("quantidade de jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total = var*var1 + var2
print(total)
-- EXECUTION TIME:
0.154945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:45) 
-- CODE:
var = int(input("Quantidade De Jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total = var*var1 + var2
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:19:49) 
-- CODE:
var = int(input("Quantidade De Jogos"))
var1 = int(input("valor dos jogos"))
var2 = int(input("valor do frete"))
total = var*var1 + var2
print(total)
-- EXECUTION TIME:
0.193593
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 2, in <module>
    var1 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:21:42) 
-- CODE:
var = int(input("Quantidade De Jogos"))
var1 = float(input("valor dos jogos"))
var2 = float(input("valor do frete"))
total = (var*var1) + var2
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:43) 
-- CODE:
var = int(input("Quantidade De Jogos"))
var1 = float(input("valor dos jogos"))
var2 = float(input("valor do frete"))
total = (var*var1) + var2
print(total)
-- EXECUTION TIME:
0.158269
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
